apps/openvpn/openvpn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvpn-ingress
  namespace: openvpn
spec:
  tls:
    - hosts:
        - openvpn.unifiedconsulting.net # replace with your domain name
      secretName: openvpn-tls # replace with your SSL certificate secret name
  rules:
    - host: openvpn.unifiedconsulting.net # replace with your domain name
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: openvpn-service
                port:
                  number: 1194
