apps/openvpn/openvpn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openvpn

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: openvpn-deployment
  namespace: openvpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openvpn
  template:
    metadata:
      labels:
        app: openvpn
    spec:
      containers:
        - name: openvpn
          image: ixdotai/openvpn
          ports:
            - containerPort: 1194
          volumeMounts:
            - name: openvpn-data
              mountPath: /etc/openvpn
      volumes:
        - name: openvpn-data
          emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: openvpn-service
  namespace: openvpn
spec:
  selector:
    app: openvpn
  ports:
    - name: port-1194
      protocol: TCP
      port: 1194
      targetPort: 1194
  type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvpn-ingress
  namespace: openvpn
spec:
  tls:
    - hosts:
        - openvpn.unifiedconsulting.net # replace with your domain name
      secretName: openvpn-tls # replace with your SSL certificate secret name
  rules:
    - host: openvpn.unifiedconsulting.net # replace with your domain name
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: openvpn-service
                port:
                  number: 1194
